--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Winhex/Winhex/bin/Debug
+/Winhex/Winhex/obj/Debug
