--- a/Winhex/Winhex/Winhex.csproj
+++ b/Winhex/Winhex/Winhex.csproj
@@ -52,14 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Interfaces\ILogCreator.cs" />
-    <Compile Include="Models\Alphabet.cs" />
+    <Compile Include="Models\Keyboard.cs" />
     <Compile Include="Models\KeyLogger.cs" />
     <Compile Include="Models\LogObjects\UserAction.cs" />
     <Compile Include="Models\LogObjects\UserLog.cs" />
@@ -68,9 +62,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolver.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
